fix: add xai-api-key to CLI onboard, strip non-xAI providers from auth choices

--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
   "scripts": {
     "dev": "node scripts/run-node.mjs",
     "postinstall": "node scripts/postinstall.js",
-    "prepack": "pnpm build && pnpm ui:build",
+    "prepack": "echo 'dist-only fork, no build step'",
     "docs:list": "node scripts/docs-list.js",
     "docs:bin": "node scripts/build-docs-list.mjs",
     "docs:dev": "cd docs && mint dev",
